# sora-tic-tac-toe

./: LICENSE  README.md  package.json
src/: index.html  index.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
