[package]
name = "sora-tic-tac-toe"
version = "0.1.0"
description = "sora-tic-tac-toe"
authors = ["ㅇㅇ"]
edition = "2021"

[lib]
name = "sora_tic_tac_toe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

